<resources>
    <string name="app_name">ApplicationForCustomerInformation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bin">BIN: </string>
    <string name="enter_the_first_digits_of_a_card_number_bin_iin">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="click">click</string>
    <string name="hintBin">BIN</string>
    <string name="scheme_network">SCHEME/NETWORK</string>
    <string name="type">TYPE</string>
    <string name="debit">Debit</string>
    <string name="slash">/</string>
    <string name="credit">Credit</string>
    <string name="brand">BRAND</string>
    <string name="prepaid">PREPAID</string>
    <string name="yes">Yes</string>
    <string name="slash1">/</string>
    <string name="no">No</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="yes2">Yes</string>
    <string name="slash2">/</string>
    <string name="no2">No</string>
    <string name="country">COUNTRY</string>
    <string name="latitude">latitude:</string>
    <string name="longitude">, longitude:</string>
    <string name="bank">BANK</string>
    <string name="request_history">request history:</string>
    <string name="bin_for_item">BIN:</string>
</resources>