<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/scheme_and_network_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:alpha="0.75"
            android:text="@string/scheme_network"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bin"/>

        <TextView
            android:id="@+id/scheme_and_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/scheme_and_network_label"
            app:layout_constraintStart_toStartOf="@id/scheme_and_network_label"/>

        <TextView
            android:id="@+id/type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:alpha="0.75"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@id/scheme_and_network_label"
            app:layout_constraintTop_toTopOf="@id/scheme_and_network_label"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/type_debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:alpha="0.35"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/type_label"
            app:layout_constraintStart_toStartOf="@id/type_label"/>

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.60"
            android:text="@string/slash"
            app:layout_constraintStart_toEndOf="@id/type_debit"
            app:layout_constraintTop_toTopOf="@id/type_debit"/>

        <TextView
            android:id="@+id/type_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.35"
            android:textColor="@color/black"
            android:text="@string/credit"
            app:layout_constraintStart_toEndOf="@id/slash"
            app:layout_constraintTop_toTopOf="@id/type_debit"/>

        <TextView
            android:id="@+id/brand_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.75"
            android:text="@string/brand"
            app:layout_constraintTop_toBottomOf="@id/scheme_and_network"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/brand_label"
            app:layout_constraintTop_toBottomOf="@id/brand_label"/>

        <TextView
            android:id="@+id/prepaid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:text="@string/prepaid"
            app:layout_constraintTop_toTopOf="@id/brand_label"
            app:layout_constraintStart_toStartOf="@id/type_label"/>

        <TextView
            android:id="@+id/prepaid_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.35"
            android:textColor="@color/black"
            android:text="@string/yes"
            app:layout_constraintTop_toBottomOf="@id/prepaid_label"
            app:layout_constraintStart_toStartOf="@id/prepaid_label"/>

        <TextView
            android:id="@+id/slash2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash1"
            android:alpha="0.50"
            app:layout_constraintStart_toEndOf="@id/prepaid_yes"
            app:layout_constraintTop_toTopOf="@id/prepaid_yes"/>

        <TextView
            android:id="@+id/prepaid_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:alpha="0.35"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/slash2"
            app:layout_constraintTop_toTopOf="@id/prepaid_yes"/>

        <TextView
            android:id="@+id/card_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.75"
            android:text="@string/card_number"
            app:layout_constraintTop_toBottomOf="@id/brand"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/length_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textSize="11sp"
            android:alpha="0.75"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="@id/card_number_label"
            app:layout_constraintTop_toBottomOf="@id/card_number_label"/>

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/length_label"/>

        <TextView
            android:id="@+id/luhn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/luhn"
            android:textSize="11sp"
            android:alpha="0.75"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toEndOf="@id/length_label"
            app:layout_constraintTop_toTopOf="@id/length_label"/>

        <TextView
            android:id="@+id/luhn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.35"
            android:textColor="@color/black"
            android:text="@string/yes2"
            app:layout_constraintTop_toBottomOf="@id/luhn_label"
            app:layout_constraintStart_toStartOf="@id/luhn_label"/>

        <TextView
            android:id="@+id/slash3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash2"
            android:alpha="0.50"
            app:layout_constraintStart_toEndOf="@id/luhn_yes"
            app:layout_constraintTop_toTopOf="@id/luhn_yes"/>

        <TextView
            android:id="@+id/luhn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no2"
            android:alpha="0.35"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/slash3"
            app:layout_constraintTop_toTopOf="@id/luhn_yes"/>

        <TextView
            android:id="@+id/country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:alpha="0.75"
            app:layout_constraintTop_toTopOf="@id/card_number_label"
            app:layout_constraintStart_toStartOf="@id/prepaid_label"/>

        <TextView
            android:id="@+id/alpha2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="@id/country_label"
            app:layout_constraintTop_toBottomOf="@id/country_label"/>

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toEndOf="@id/alpha2"
            app:layout_constraintTop_toBottomOf="@id/country_label"/>

        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="12sp"
            android:alpha="0.80"
            app:layout_constraintStart_toStartOf="@id/alpha2"
            app:layout_constraintTop_toBottomOf="@id/country"/>

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/latitude_label"
            app:layout_constraintTop_toBottomOf="@id/country"
            app:layout_constraintBottom_toBottomOf="@id/latitude_label"/>

        <TextView
            android:id="@+id/longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:alpha="0.80"
            android:text="@string/longitude"
            app:layout_constraintStart_toEndOf="@id/latitude"
            app:layout_constraintTop_toTopOf="@id/latitude_label"/>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/longitude_label"
            app:layout_constraintTop_toBottomOf="@id/country"/>

        <TextView
            android:id="@+id/bank_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bank"
            android:alpha="0.75"
            app:layout_constraintTop_toBottomOf="@id/length"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bank_label"/>

        <TextView
            android:id="@+id/city_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/name_bank"
            app:layout_constraintTop_toBottomOf="@id/bank_label"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/url_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="www.ddd.dk"
            android:textColor="#547ED6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_bank"/>

        <TextView
            android:id="@+id/number_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#547ED6"
            tools:text="98767886567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/url_bank"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>